more updates on types
